trying out layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,13 @@ h2 {
 }
 
 #about {
-    background-color: white;
+    background-color: rgb(47, 141, 112);
 }
 
 #about p {
     font-size: 2.33rem; /* Adjust the size as needed */
     line-height: 2.2; /* Optional: Improves readability */
+    background-color: rgb(47, 141, 112);
 }
 
 /* Target the image in the About Me section */
@@ -43,6 +44,7 @@ h2 {
 
 #contact {
     background-color: white;
+    margin-bottom: 50%;
 }
 
 #hero { 
